AdaptativeCycle