@@ -4,35 +4,30 @@ import model.Intersection;
 import model.Road;
 import model.TrafficLight;
 import model.state.Green;
-import model.state.Red;
+import model.state.Yellow;
 
 import java.util.ArrayList;
 import java.util.List;
 
 public class FixedCycle implements Strategy {
-    private int currentIndex = 0;
-
     @Override
     public void apply(Intersection intersection) {
         List<Road> roadList = new ArrayList<>(intersection.getRoads().keySet());
-        Road currentRoad = roadList.get(currentIndex);
-        TrafficLight trafficLightList = intersection.getTrafficLights(currentRoad).getFirst();
+        Road road1 = roadList.get(0);
+        Road road2 = roadList.get(1);
 
-        if (trafficLightList.getCor() == TrafficLight.Cor.GREEN || trafficLightList.getCor() == TrafficLight.Cor.YELLOW)
-            return;
+        //Procura qual dos dois é o road que está vermelho e verde
+        TrafficLight trafficLight1 = intersection.getTrafficLights(road1).getFirst();
+        Road redRoad = trafficLight1.getCor() == TrafficLight.Cor.RED ? road1 : road2;
+        Road greenRoad = redRoad == road1 ? road2 : road1;
 
-        currentIndex++;
-        if (currentIndex >= roadList.size()) {
-            currentIndex = 0;
+        //Faz a mudança dos estados dos semáforos
+        for (TrafficLight tl : intersection.getTrafficLights(greenRoad)) {
+            tl.setState(new Yellow());
         }
-        currentRoad = roadList.get(currentIndex);
 
-        //define os estados dos roads no momento de iniciar o ciclo
-        for (Road road : roadList) {
-            List<TrafficLight> lights = intersection.getTrafficLights(road);
-            for (TrafficLight trafficLight : lights) {
-                trafficLight.setState(road == currentRoad ? new Green() : new Red());
-            }
+        for (TrafficLight tl : intersection.getTrafficLights(redRoad)) {
+            tl.setState(new Green());
         }
     }
 }
